@@ -43,6 +43,12 @@ LanguageTool Change Log
     -fix response of After the Deadline mode: <description>...</description> was
      sometimes empty, confusing the text check in WordPress
 
+Internal:
+    -Words are not ignored anymore by the spell checker just because they occur in
+     a rule's suggestion. If you want the spell checker to ignore words globally, add
+     them to hunspell/ignore.txt. To ignore them depending on the context, add a
+     'ignore_spelling' rule to disambiguation.xml.
+
 
 2.7 (2014-09-29)
 
